--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 	
 	<head>
+		<meta charset="UTF-8">
+		<title>Jay Froment-Rudder's Personal Website</title>
 		
 	</head>
+	
+	<body>
+		
+	</body>
 	
 </html>
