--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	
 	<head>
 		<meta charset="UTF-8">
-		<title>Jay Froment-Rudder's Personal Website</title>
+		<title>Jay Froment-Rudder</title>
 		
 	</head>
 	
