--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 	
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="style.css">
 		<title>Jay Froment-Rudder</title>
 		
 	</head>
 	
 	<body>
-		
+		<h1>Jay Froment-Rudder</h1>
+		<h2>Welcome to my Personal Website, Have a Look Around</h2>
 	</body>
 	
 </html>
