Change of background, addition of links to GitHub and Resume, addition of resume file

--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 	</head>
 	
 	<body>
+		<div class="topnav">
+			<a href="https://github.com/jfromentrudder" target="_blank">GitHub</a>
+			<a href="ResumeHomeAddress.pdf" target="_blank">Resume</a>
+		</div>
 		<h1>Jay Froment-Rudder</h1>
 		<h2>Welcome to my Personal Website, Have a Look Around</h2>
+		<p>
+			
+		</p>
 	</body>
 	
 </html>
