Created section for introduction along with section background, removed low quality image

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 			<a href="https://github.com/jfromentrudder" target="_blank">GitHub</a>
 			<a href="ResumeHomeAddress.pdf" target="_blank">Resume</a>
 		</div>
-		<h1>Jay Froment-Rudder</h1>
-		<h2>Welcome to my Personal Website, Have a Look Around</h2>
-		<p>
-			
-		</p>
+				
+		<div id="Introduction">
+			<img src="Images/image1.jpeg" alt="PortraitOfMe"></img>
+			<h1>Jay Froment-Rudder</h1>
+			<h2>Computer Science Student at Stony Brook University</h2>
+		</div>
+		
 	</body>
 	
 </html>
