--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 		<div class="topnav">
 			<a href="https://github.com/jfromentrudder" target="_blank">GitHub</a>
 			<a href="ResumeHomeAddress.pdf" target="_blank">Resume</a>
+			<a href="index.html">Home</a>
 		</div>
 				
 		<div id="Introduction">
-			<img src="Images/image1.jpeg" alt="PortraitOfMe"></img>
-			<h1>Jay Froment-Rudder</h1>
-			<h2>Computer Science Student at Stony Brook University</h2>
+			<img src="Images/image1.jpeg" alt="PortraitOfMe" id="Self"></img>
+			<h1 id="Name"><u>Jay Froment-Rudder</u></h1>
+			<h2 id="Descrip">Student of Computer Science</h2>
 		</div>
 		
 	</body>
