--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
 			<a href="ResumeHomeAddress.pdf" target="_blank">Resume</a>
 			<a href="index.html">Home</a>
 		</div>
-				
-		<div id="Introduction">
+		
+		<div class="column">
 			<img src="Images/image1.jpeg" alt="PortraitOfMe" id="Self"></img>
-			<h1 id="Name"><u>Jay Froment-Rudder</u></h1>
-			<h2 id="Descrip">Student of Computer Science</h2>
+		</div>
+				
+		<div class="column" id="Introduction">
+			<h1 id="Name">Jay Froment-Rudder</h1>
+			<hr>
+			<h2 id="Descrip">Computer Science Student and Software Developer</h2>
+			<h2 id="Descrip2">Technical Skills I am Most Proficient in:</h2>
+			<img src="Images/JavaLogo.png" alt="JavaLogo" id="Logos"></img>
 		</div>
 		
 	</body>
