Just adding links and logos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	
 	<body>
 		<div class="topnav">
+			<a href="https://www.linkedin.com/in/jfromentrudder" target="_blank">LinkedIn</a>
 			<a href="https://github.com/jfromentrudder" target="_blank">GitHub</a>
 			<a href="ResumeHomeAddress.pdf" target="_blank">Resume</a>
 			<a href="index.html">Home</a>
@@ -25,6 +26,16 @@
 			<h2 id="Descrip">Computer Science Student and Software Developer</h2>
 			<h2 id="Descrip2">Technical Skills I am Most Proficient in:</h2>
 			<img src="Images/JavaLogo.png" alt="JavaLogo" id="Logos"></img>
+			<img src="Images/cppLogo.png" alt="CppLogo" id="Logos"></img>
+			<img src="Images/pythonLogo.png" alt="PythonLogo" id="Logos"></img>
+		</div>
+		
+		<div class="footer">
+			<p>
+				Contact information:<br>
+				1-917-889-4666<br>
+				<a href="mailto:jfromentrudder@gmail.com">jfromentrudder@gmail.com</a
+			</p>
 		</div>
 		
 	</body>
