--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 			<h1 id="Name">Jay Froment-Rudder</h1>
 			<hr>
 			<h2 id="Descrip">Computer Science Student and Software Developer</h2>
+			
+			<p>
+				My name is Jay Froment-Rudder, I am currently a Computer Science student at Stony Brook University. My main work experience has been over the summers of 2017 and 2018 as first an Instructor and then as a Lead Instructor at iD Tech Camps. There I was an instructor teaching various computer science concepts, techniques, and languages to teens and children.
+<br>I am generally most skilled in coding with Java, Python, C++, HTML, CSS, and JavaScript.
+			</p>
+			
 			<h2 id="Descrip2">Technical Skills I am Most Proficient in:</h2>
 			<img src="Images/JavaLogo.png" alt="JavaLogo" id="Logos"></img>
 			<img src="Images/cppLogo.png" alt="CppLogo" id="Logos"></img>
