--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 			<a href="https://www.linkedin.com/in/jfromentrudder" target="_blank">LinkedIn</a>
 			<a href="https://github.com/jfromentrudder" target="_blank">GitHub</a>
 			<a href="ResumeHomeAddress.pdf" target="_blank">Resume</a>
-			<a href="index.html">Home</a>
 		</div>
 		
 		<div class="column">
@@ -25,24 +24,29 @@
 			<hr>
 			<h2 id="Descrip">Computer Science Student and Software Developer</h2>
 			
-			<p>
-				My name is Jay Froment-Rudder, I am currently a Computer Science student at Stony Brook University. My main work experience has been over the summers of 2017 and 2018 as first an Instructor and then as a Lead Instructor at iD Tech Camps. There I was an instructor teaching various computer science concepts, techniques, and languages to teens and children.
-<br>I am generally most skilled in coding with Java, Python, C++, HTML, CSS, and JavaScript.
+			<p id="Bio">
+				My name is Jay Froment-Rudder, I am currently a Computer Science student at Stony Brook University. My main work experience has been over the summers of 2017 and 2018 as first an Instructor and then as a Lead Instructor at iD Tech Camps. As an Instructor I taught various computer science concepts, techniques, and languages to teens and children. As Lead Instuctor I held the same teaching responsibilities as an Instructor as well as being tasked with helping to manage my staff along with the Director and Assistant Director.
+			<br>
+				I am generally most skilled in coding with Java, Python, C++, HTML, CSS, and JavaScript.
 			</p>
 			
-			<h2 id="Descrip2">Technical Skills I am Most Proficient in:</h2>
-			<img src="Images/JavaLogo.png" alt="JavaLogo" id="Logos"></img>
-			<img src="Images/cppLogo.png" alt="CppLogo" id="Logos"></img>
-			<img src="Images/pythonLogo.png" alt="PythonLogo" id="Logos"></img>
+			<br>
+			<h2 id="Descrip">Technical Skills I am Most Proficient in:</h2>
+			<img src="Images/JavaLogo.png" alt="JavaLogo" id="Logo1"></img>
+			<img src="Images/pythonLogo.png" alt="PythonLogo" id="Logo2"></img>
+			<img src="Images/cppLogo.png" alt="CppLogo" id="Logo3"></img>
+			<img src="Images/html5-css-javascript-logos.png" alt="HtmlCSSJSLogos" id="Logo4"></img>
 		</div>
 		
-		<div class="footer">
-			<p>
-				Contact information:<br>
-				1-917-889-4666<br>
-				<a href="mailto:jfromentrudder@gmail.com">jfromentrudder@gmail.com</a
-			</p>
-		</div>
+		<footer>
+			<div class="footer">
+				<p>
+					Contact information:<br>
+					1-917-889-4666<br>
+					<a href="mailto:jfromentrudder@gmail.com">jfromentrudder@gmail.com</a
+				</p>
+			</div>
+		</footer>
 		
 	</body>
 	
