Completion of Version 1 of my website

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 				I am generally most skilled in coding with Java, Python, C++, HTML, CSS, and JavaScript.
 			</p>
 			
-			<br>
+			<p id="Bio">
+				<b>To find any of my relevant projects be sure to navigate to my GitHub which is linked at the top right of this page.</b>
+			</p>
+			
 			<h2 id="Descrip">Technical Skills I am Most Proficient in:</h2>
 			<img src="Images/JavaLogo.png" alt="JavaLogo" id="Logo1"></img>
 			<img src="Images/pythonLogo.png" alt="PythonLogo" id="Logo2"></img>
