--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<div class="topnav">
 			<a href="https://www.linkedin.com/in/jfromentrudder" target="_blank">LinkedIn</a>
 			<a href="https://github.com/jfromentrudder" target="_blank">GitHub</a>
+			<a href="https://github.com/jfromentrudder/TechnicalCommunicationsAssignments" target="_blank">Technical Communications</a>
 			<a href="ResumeHomeAddress.pdf" target="_blank">Resume</a>
 		</div>
 		
