--- a/resume.html
+++ b/resume.html
@@ -18,27 +18,10 @@
 			<li><a href="bio.html" target="_self">About Me</a></li>
 			<li><a href="index.html" target="_self">Home</a></li>
 		</ul>
-
 		
-		<div id="Self">
-			<img src="Images/image1.jpeg" alt="PortraitOfMe" id="Self"></img>
+		<div>
+			<embed src="ResumeHomeAddress.pdf" type="application/pdf" width="100%" height="800px"/>
 		</div>
-		
-		<div class="column" id="Introduction">
-			<h1 id="Name">Jay Froment-Rudder</h1>
-			<hr>
-			<h2 id="Descrip">Computer Science Student and Software Developer</h2>
-		</div>
-			
-		
-		<footer>
-			<div class="footer">
-				<p>
-					Contact me via email here:
-					<a href="mailto:jfromentrudder@gmail.com">jfromentrudder@gmail.com</a
-				</p>
-			</div>
-		</footer>
 		
 	</body>
 	
