--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
 		</ul>
 		
 		<div>
-			<embed src="ResumeHomeAddress.pdf" type="application/pdf" width="100%" height="800px"/>
+			<embed src="resume.pdf" type="application/pdf" width="100%" height="800px"/>
 		</div>
 		
 	</body>
