--- a/index.html
+++ b/index.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-	
+
 	<head>
 		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="style.css">
 		<title>Jay Froment-Rudder</title>
-		
-	</head>
-	
-	<body>
-		<ul class="topnav">
-			<li><a href="https://www.linkedin.com/in/jfromentrudder" target="_blank">LinkedIn</a></li>
-			<li><a href="https://github.com/jfromentrudder" target="_blank">GitHub</a></li>
-			<li><a href="https://github.com/jfromentrudder/TechnicalCommunicationsAssignments" target="_blank">Technical Communications</a></li>
-			<li><a href="resume.html" target="_self">Resume</a></li>
-			<li><a href="bio.html" target="_self">About Me</a></li>
-			<li><a href="index.html" target="_self">Home</a></li>
-		</ul>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+			integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+		<link rel="stylesheet" href="style.css">
 
-		
-		<div id="Self">
-			<img src="Images/image1.jpeg" alt="PortraitOfMe" id="Self"></img>
+	</head>
+
+	<body>
+
+		<div class="container-fluid">
+			<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+				<a href="#" class="navbar-brand">Navbar</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<div class="navbar-nav">
+						<a href="index.html" class="nav-item nav-link">Home</a>
+						<a href="Home" class="nav-item nav-link">About</a>
+						<a href="Home" class="nav-item nav-link">Contact</a>
+					</div>
+
+					<form class="d-flex">
+						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+						<button class="btn btn-outline-success" type="submit">Search</button>
+					</form>
+				</div>
+			</nav>
 		</div>
-		
-		<div class="column" id="Introduction">
-			<h1 id="Name">Jay Froment-Rudder</h1>
-			<hr>
-			<h2 id="Descrip">Computer Science Student and Software Developer</h2>
-		</div>
-			
-		
-		<footer>
-			<div class="footer">
-				<p>
-					Contact me via email here:
-					<a href="mailto:jfromentrudder@gmail.com">jfromentrudder@gmail.com</a
-				</p>
-			</div>
-		</footer>
-		
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+			crossorigin="anonymous"></script>
 	</body>
-	
+
 </html>
