--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 		<title>Jay Froment-Rudder</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
 			integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 
 	</head>
 
 	<body>
-
-		<div class="container-fluid">
-			<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
-				<a href="#" class="navbar-brand">Navbar</a>
+		<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+			<div class="container-fluid">
+				<a href="index.html" class="navbar-brand">Logo Here</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent">
 					<span class="navbar-toggler-icon"></span>
@@ -25,16 +26,18 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<div class="navbar-nav">
 						<a href="index.html" class="nav-item nav-link">Home</a>
-						<a href="Home" class="nav-item nav-link">About</a>
-						<a href="Home" class="nav-item nav-link">Contact</a>
+						<a href="index.html" class="nav-item nav-link">About</a>
+						<a href="index.html" class="nav-item nav-link">Contact</a>
 					</div>
 
-					<form class="d-flex">
-						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success" type="submit">Search</button>
-					</form>
 				</div>
-			</nav>
+			</div>
+		</nav>
+
+		<div class="container align-content-center">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eius provident nesciunt debitis quibusdam
+			error repellendus nisi voluptates repudiandae, necessitatibus, unde maiores eveniet minima tempora
+			reprehenderit dignissimos. Illum, ea earum!
 		</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
