--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 					<div class="navbar-nav">
 						<a href="index.html" class="nav-item nav-link">Home</a>
 						<a href="index.html" class="nav-item nav-link">About</a>
+						<a href="index.html" class="nav-item nav-link">Resume</a>
+						<a href="index.html" class="nav-item nav-link">Github</a>
 						<a href="index.html" class="nav-item nav-link">Contact</a>
 					</div>
 
@@ -35,9 +37,9 @@
 		</nav>
 
 		<div class="container align-content-center">
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eius provident nesciunt debitis quibusdam
-			error repellendus nisi voluptates repudiandae, necessitatibus, unde maiores eveniet minima tempora
-			reprehenderit dignissimos. Illum, ea earum!
+			<h1 class="display-1">
+
+			</h1>
 		</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
