some more minor changes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 	</head>
 
 	<body>
+
+		<!-- <div id="splash" class="d-flex justify-content-center align-items-center">
+
+		</div> -->
+
 		<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
 			<div class="container-fluid">
 				<a href="index.html" class="navbar-brand">Logo Here</a>
@@ -23,12 +28,12 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 					<div class="navbar-nav">
 						<a href="index.html" class="nav-item nav-link">Home</a>
+						<a href="index.html" class="nav-item nav-link">Github</a>
 						<a href="index.html" class="nav-item nav-link">About</a>
 						<a href="index.html" class="nav-item nav-link">Resume</a>
-						<a href="index.html" class="nav-item nav-link">Github</a>
 						<a href="index.html" class="nav-item nav-link">Contact</a>
 					</div>
 
@@ -37,14 +42,13 @@
 		</nav>
 
 		<div class="container align-content-center">
-			<h1 class="display-1">
 
-			</h1>
 		</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
 			crossorigin="anonymous"></script>
+		<script src="app.js"></script>
 	</body>
 
 </html>
